# rlm-benchmark

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmark/: compare.py  config.py  corpus.py  pi_agent.py  rejudge.py  run_bench.py  run_complexity.py  scoring.py  scoring_complexity.py
examples/: questions-repomix-exp1.json  questions-repomix-exp2.json
examples/results/: complexity_1783439895.json  complexity_1783441255.json  complexity_1783442106.json  rlm-all-small_1783428137.json  rlm-strong-subs_1783427851.json  vanilla-small_1783426218.json  vanilla-strong_1783426678.json
skills/question-builder/: SKILL.md
