[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlm-benchmark"
version = "0.1.0"
description = "Reusable harness to compare vanilla, terminal-agent, and RLM retrieval over codebases that exceed model context windows."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Aleksandar M.", email = "hello@aleksandarlabs.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "rlm>=0.1.0",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "requests>=2.28",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/aleksandarlabs/rlm-benchmark"
Repository = "https://github.com/aleksandarlabs/rlm-benchmark"
Issues = "https://github.com/aleksandarlabs/rlm-benchmark/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
